docsify/kustomization/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docsify
  labels:
    app: docsify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docsify
  template:
    metadata:
      labels:
        app: docsify
    spec:
      containers:
      - name: docsify
        image: ghcr.io/anddd7/anddd7.github.io/docsify:v0.0.1
        ports:
        - containerPort: 3000
