docsify/kustomization/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: docsify
  labels:
    app: docsify
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: docsify
