docsify/kustomization/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docsify
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: anddd7.mesh-shaped.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docsify
            port:
              number: 80
